--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Flash</title>
 	<link rel="stylesheet" href="index.css">
 	<link rel="icon" href="/favicon.png">
-	<script type="text/javascript" src="/common/imports/hamburger-menu.js"></script>
+	<!--script type="text/javascript" src="/common/imports/hamburger-menu.js"></script-->
 
 </head>
 
@@ -181,7 +181,7 @@
 <footer>
 Footer<br><br>
 I don't know what to put here
-<div id="by">Made by Nate Kean (A.K.A. garlicOS&reg;) in like 2018-19</div>
+<div id="by">Made by garlicOS&reg; in like 2018-19</div>
 </footer>
 
 
