Moar games, add featured section (my personal favorites)

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 <footer>
 	Footer<br><br>
 	I don't know what to put here
-	<div id="by">Made by Nate Kean (A.K.A. garlicOS&reg;) in like 2018-19</div>
+	<div id="by">Made by garlicOS&reg; in like 2018-19</div>
 </footer>
 
 
