--- a/player/index.html
+++ b/player/index.html
@@ -1,97 +1,28 @@
 <!DOCTYPE html>
-<!-- /flash/player/index.html -->
-<html lang="en">
+<!-- flash/player/index.html -->
+<html>
 <head>
-  <meta charset="utf-8" />
   
-  <script type="text/javascript">
-  /**
-  SWF Player Setup
-  1. Get GET variables to use with the SWF player
-  2. Decode and treat variables
-  3. Redirect back to menu if no game selected
-  4. Set the page title to the game title
-  */
-
-    // 1.
-    function getUrlVars() {
-	/**
-	Get URL Vars
-	Use this function to define a JS variable based off a known GET parameter.
-	Example:   var name = getUrlVars()["name"];
-	           > name
-                 "John%20Doe"
-	*/
-      var vars = {};
-      var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
-        vars[key] = value;
-      });
-      return vars;
-    }
-
-    var gameTitle = getUrlVars()["title"]; // Copy GET variables to JS
-    var gameID    = getUrlVars()["id"];
-    
-	// 2.
-    var gameTitle = decodeURIComponent(gameTitle); // Decode URI (i.e. %20 --> space character) 
-    var gameID = "swf/" + gameID + ".swf";         // Turn gameID into path to .swf
-
-    // 3.
-    if (gameID == "swf/undefined.swf") {
-      window.location = "../" // Redirect back if no game requested
-    } else {                  // Set page title to game title otherwise
-	// 4.
-      document.write('<title>'+gameTitle+'</title>');
-
-    //var debugMsg = "Title: " + gameTitle + "\nID: " + gameID
-    //alert(debugMsg);
-    }
-  </script>
+	<script src="js/setup-pt1.js" type="text/javascript"></script>
+	<script src="js/swfobject.js" type="text/javascript"></script>
+	<script src="js/setup-pt2.js" type="text/javascript"></script>
   
-  <meta name="description" content="" />
-
-  <script src="js/swfobject.js"></script>
-  <script>
-  /**
-  1. Set up more general variables for the SWF player
-  2. Start the SWF 
-  */
-    // 1.
-    var flashvars = {
-    };
-    var params = {
-      menu:  "false",
-      scale: "showAll", // Fit to screen without distortion or cropping
-      allowFullscreen:   "true",
-      allowScriptAccess: "always",
-      bgcolor: "#000000",
-      wmode:   "direct"
-    };
-    var attributes = {
-      id: gameTitle
-    };
-	// 2.
-    swfobject.embedSWF( // "This is where the fun begins." -Anakin Skywalker
-      gameID, // Path to the SWF file goes here
-      "altContent", "100%", "100%", "10.0.0", 
-      "expressInstall.swf",
-      flashvars, params, attributes);
-  </script>
-  
-  <!-- Ignore styling until scripts have loaded to get the SWF playing faster -->
-  <link rel="shortcut icon" href="/favicon.png">
-  <link rel="stylesheet" href="../player.css">
-  <link rel="stylesheet" href="../index.css">
+	<!-- Ignore styling until scripts have gotten a chance to load to get the SWF playing faster -->
+	<link rel="icon"       href="/favicon.png">
+	<link rel="stylesheet" href="player.css">
+	
 </head>
 <body>
-  <div id="altContent"> <!-- Below should only show up if something goes wrong with the SWF player -->
-    <div class="error">Looks like you don't have Flash enabled. Please enable it by clicking the box below.</div>
-	<object type="application/x-shockwave-flash" data="flashTest.swf" width="100%" height="100%">
-	  <param name="wmode" value="direct" />
-	  <param name="allowscriptaccess" value="always" />
-    </object>
 
-    <noscript style="color:#FAFAFA">Looks like you have JavaScript disabled for this page. Don't expect anything to work right.</noscript>
-  </div>
+	<div id="altContent"> <!-- Below should only show up if something goes wrong with the SWF player -->
+		<div class="error">Looks like you don't have Flash enabled. Please enable it by clicking the box below.</div>
+		<object type="application/x-shockwave-flash" data="flashTest.swf" width="100%" height="100%">
+			<param name="wmode" value="direct" />
+			<param name="allowscriptaccess" value="always" />
+		</object>
+
+		<noscript style="color:#FAFAFA">Looks like you have JavaScript disabled on this page. That might've flown on the select page, but you really do need it here.</noscript>
+	</div>
+	
 </body>
 </html>
