Fix favicon <link>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<title>Flash</title>
 	<link rel="stylesheet" href="index.css">
-	<link rel="icon" href="/favicon.png">
+	<link rel="icon" href="favicon.png">
 
 </head>
 
