Move another game to Featured (Get On Top)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<title>Flash</title>
 	<link rel="stylesheet" href="index.css">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="/favicon.png">
 	<script type="text/javascript" src="/common/imports/hamburger-menu.js"></script>
 
 </head>
@@ -18,26 +18,32 @@
 <div id="card-container-container"> <!-- For dynamic margins -->
 	<div id="featured">
 		
-		<h1>Featured</h1>	
+		<h1>Featured</h1>
 		
 		<div class="card-container">
 		
-			<a class="card hl" href="player/?id=pacxon&title=Pacxon">
-				<img src="img/pacxon.jpg">
-				<p class="game title">Pacxon</p>
-				<p>Fill in the screen, but watch out for ghosts.</p>
-			</a>
-
 			<a class="card hl" href="player/?id=ditto&title=Ditto">
 				<img src="img/ditto.png">
 				<p class="game title">Ditto</p>
 				<p>Navigate your way through an atmospheric puzzle platformer.</p>
 			</a>
+		
+			<a class="card hl" href="player/?id=getontop&title=Get On Top">
+				<img src="img/getontop.jpg">
+				<p class="game title">Get On Top <b>2P</b></p>
+				<p>Jump, push, flip - do whatever it takes to slam your opponent to the ground.</p>
+			</a>	
 
-			<a class="card hl" href="player/?id=jjjump&title=J-J-Jump">
+			<a class="card hl" href="player/?id=jjjump&title=J-J-Jump&icon=1">
 				<img src="img/jjjump.png">
 				<p class="game title">J-J-Jump</p>
 				<p>Use your super J-J-Jump powers to escape <span class="small-caps">the flood</span>.</p>
+			</a>
+
+			<a class="card hl" href="player/?id=pacxon&title=Pacxon">
+				<img src="img/pacxon.jpg">
+				<p class="game title">Pacxon</p>
+				<p>Fill in the screen, but watch out for ghosts.</p>
 			</a>
 		
 		</div>
@@ -56,12 +62,6 @@
 			<img src="img/supermarioflash2.png">
 			<p class="game title">Super Mario Flash 2</p>
 			<p>A Super Mario World-themed Mario level maker.</p>
-		</a>
-
-		<a class="card hl" href="player/?id=getontop&title=Get On Top">
-			<img src="img/getontop.jpg">
-			<p class="game title">Get On Top <b>2P</b></p>
-			<p>Jump, push, flip - do whatever it takes to slam your opponent to the ground.</p>
 		</a>
 
 		<a class="card hl" href="player/?id=fancypantsadventure&title=Fancy Pants Adventure">
@@ -112,11 +112,11 @@
 			<p>Explore the mines using your laser cannon to carve through the rocks.</p>
 		</a>
 
-		<a class="card hl" href="player/?id=cavechaos&title=Cave Chaos">
+		<!--a class="card hl" href="player/?id=cavechaos&title=Cave Chaos"> broken
 			<img src="img/cavechaos.jpg">
 			<p class="game title">Cave Chaos <b>2P</b></p>
 			<p>Adventure through an unstable cave network.</p>
-		</a>
+		</a-->
 
 		<a class="card hl" href="player/?id=changetype&title=changeType()">
 			<img src="img/changetype.png">
@@ -190,7 +190,7 @@
 			<p>Find <em>your</em> present among a pile of other presents.</p>
 		</a>
 
-		<a class="card hl" href="player/?id=gunbrick&title=Gunbrick">
+		<a class="card hl" href="player/?id=gunbrick&title=Gunbrick&icon=1">
 			<img src="img/gunbrick.png">
 			<p class="game title">Gunbrick</p>
 			<p>The lowest-resolution game you'll ever play.</p>
@@ -202,7 +202,7 @@
 			<p>Help Hot Air Jr. find his lost dog. Just don't pop him.</p>
 		</a>
 
-		<a class="card hl" href="player/?id=icebeak&title=Icebeak">
+		<a class="card hl" href="player/?id=icebeak&title=Icebeak&icon=1">
 			<img src="img/icebeak.png">
 			<p class="game title">Icebeak</p>
 			<p>Freeze flaming monsters and shatter puzzles.</p>
@@ -226,11 +226,11 @@
 			<p>Draw the symbols to pop the balloons and stop the beetleknights landing.</p>
 		</a>
 
-		<a class="card hl" href="player/?id=megamash&title=Mega Mash">
+		<!--a class="card hl" href="player/?id=megamash&title=Mega Mash"> broken
 			<img src="img/megamash.jpg">
 			<p class="game title">Mega Mash</p>
 			<p>Help guide 7 heroes through the perils of a corrupted game cartridge.</p>
-		</a>
+		</a-->
 
 		<a class="card hl" href="player/?id=nitromemustdie&title=Nitrome Must Die">
 			<img src="img/nitromemustdie.png">
@@ -313,7 +313,7 @@
 		<a class="card hl" href="player/?id=swindler&title=Swindler">
 			<img src="img/swindler.png">
 			<p class="game title">Swindler</p>
-			<p>Drop down from a rope hanging from the ceiling and steal stuff.</p>
+			<p>Drop down from a rope and steal stuff.</p>
 		</a>
 
 		<a class="card hl" href="player/?id=swindler2&title=Swindler 2">
@@ -377,7 +377,7 @@
 <footer>
 	Footer<br><br>
 	I don't know what to put here
-	<div id="by">Made by garlicOS&reg; in like 2018-19</div>
+	<div id="by">Made by Nate Kean (A.K.A. garlicOS&reg;) in like 2018-19</div>
 </footer>
 
 
