Use the proper em dash character

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<a class="card hl" href="player/?id=getontop&title=Get On Top">
 				<img src="img/getontop.jpg">
 				<p class="game title">Get On Top <b>2P</b></p>
-				<p>Jump, push, flip - do whatever it takes to slam your opponent to the ground.</p>
+				<p>Jump, push, flip&mdash;do whatever it takes to slam your opponent to the ground.</p>
 			</a>	
 
 			<a class="card hl" href="player/?id=jjjump&title=J-J-Jump&icon=1">
